--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -7,7 +7,7 @@
           <div class="card card-register mr-auto ml-auto ">
             <h3 class="title text-white font-weight-bold">Welcome</h3>
 
-            <form #form='ngForm' (ngSubmit)='onSubmit(form)' class="register-form">
+            <form #form='ngForm' (ngSubmit)='onSubmit()' class="register-form">
 
               <label>Name</label>
               <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
