--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -16,12 +16,12 @@
                   </span>
                 </div>
 
-                <input type="text" #email='ngModel' name='email' ngModel class="form-control" placeholder="Email"
-                  (focus)="focus=true" (blur)="focus=false" email required maxlength="30">
-                
+                <input type="text" #email='ngModel' name='email' ngModel class="form-control" placeholder="Email" email
+                  required maxlength="30">
+
               </div>
               <small style="color: black;" *ngIf='email.errors?.required && email.touched'>Email is required</small>
-              <small  style="color: black;" *ngIf='email.errors?.email && email.touched'>Email is invalid</small><br>
+              <small style="color: black;" *ngIf='email.errors?.email && email.touched'>Email is invalid</small><br>
 
               <label>Password</label>
               <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus1===true}">
@@ -30,10 +30,11 @@
                     <i class="nc-icon nc-key-25"></i>
                   </span>
                 </div>
-                <input type="password" #password='ngModel' ngModel name='password' maxlength="8" required class="form-control" placeholder="Password" (focus)="focus1=true"
-                  (blur)="focus1=false" >
+                <input type="password" #password='ngModel' ngModel name='password' maxlength="8" required
+                  class="form-control" placeholder="Password">
               </div>
-              <small style="color: black;" *ngIf='password.errors?.required && password.touched'>Password is required</small>
+              <small style="color: black;" *ngIf='password.errors?.required && password.touched'>Password is
+                required</small>
 
               <button [disabled]='form.invalid' class="btn btn-danger btn-block btn-round">Log In</button>
             </form>
