--- a/src/app/pages/my-profile/my-profile.component.html
+++ b/src/app/pages/my-profile/my-profile.component.html
@@ -27,7 +27,7 @@
             <hr class="my-5">
             <h4 class="info-title my-3 font-weight-normal h3 text-center mb-5" style="color: blueviolet">Poems</h4>
             <div class="row following" id="follows">
-                <div class="col-md-8 ml-auto mr-auto">
+                <div class="col-lg-8 col-md-10 ml-auto mr-auto">
                     <ul class="list-unstyled follows">
                         <li *ngFor='let p of poems'>
                             <div class="row">
