--- a/src/app/pages/poems/create-poem/create-poem.component.html
+++ b/src/app/pages/poems/create-poem/create-poem.component.html
@@ -1,11 +1,11 @@
 <div class="p-5 " style="background-color: blueviolet;">
     <div class="pt-5">
-        <h2 id='title' contenteditable="true" class="title mb-5 mt-5  text-center text-white">Add Title</h2>
+        <h2 id='title' contenteditable="true" class="title mb-5 mt-5  text-center text-white">Click here to add title</h2>
     </div>
 </div>
 <div class="container py-5">
     <div id='poem' style="white-space: pre;" aria-multiline="true" contenteditable="true" class="text-center h4 poem">
-        Write your poem</div>
+        Click here to write a poem</div>
 </div>
 <div class="col-12">
     <hr>
