--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -33,7 +33,7 @@
                                     </h6>
                                 </div>
                                 <div class="col-3 mr-auto mt-2  ml-auto">
-                                    <button routerLink='/poem' routerLink='/poems/{{p._id}}'
+                                    <button  routerLink='/poems/{{p._id}}'
                                         class="btn btn-outline-danger btn-round ">Read</button>
                                 </div>
                             </div>
