--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <div class="page-header page-header-xs" data-parallax="true"
-        style="background-image: url('./assets/img/fabio-mangione.jpg');">
+        style="background-image: url('./assets/img/examples/signup.gif');">
         <div class="font-weight-bold " style="opacity: 1;color: white;">
             <h3>{{user.userName}}</h3>
         </div>
