--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -2,7 +2,7 @@
     <div class="page-header page-header-xs" data-parallax="true"
         style="background-image: url('./assets/img/examples/signup.gif');">
         <div class="font-weight-bold " style="opacity: 1;color: white;">
-            <h3>{{user.userName}}</h3>
+            <h3 class="text-dark"><b><b>{{user.userName}}</b></b></h3>
         </div>
     </div>
     <div class="section profile-content">
