--- a/src/app/pages/app-home/app-home.component.html
+++ b/src/app/pages/app-home/app-home.component.html
@@ -15,7 +15,7 @@
                         <li *ngFor='let p of poems'>
                             <div class="row">
                                 <div class="col-7 ml-auto">
-                                    <h6 class="text-dark">{{p.title}}<br /><small routerLink='/user/{{p.user._id}}' class="text-dark">
+                                    <h6 class="text-dark">{{p.title}}<br /><small style="cursor: pointer;" routerLink='/user/{{p.user._id}}' class="text-dark">
                                     <b>By {{p.user.userName}}</b></small>
                                     </h6>
                                 </div>
